jupyterhub/templates/opennetpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  generation: 1
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:ingress: {}
          f:policyTypes: {}
      manager: agent
      operation: Update
  name: allow-same-namespace
  namespace: jupyter
  resourceVersion: "9643752"
  selfLink: /apis/networking.k8s.io/v1/namespaces/jupyter/networkpolicies/allow-same-namespace
  uid: 7702a1b9-3e52-4f75-920d-2160cc1f93eb
spec:
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
